Flexboxes should now wrap in Safari. Fixes #14.

--- a/public/static/css/reader.css
+++ b/public/static/css/reader.css
@@ -517,12 +517,12 @@ body.book-cover-loaded .loader.cover {
 }
 
 #comments-box {
-    flex: 3;
+    flex: 3 1 0;
     min-width: 300px;
 }
 
 #authors-note {
-    flex: 1;
+    flex: 1 1 0;
     min-width: 200px;
     color: #ddd;
 }
@@ -620,7 +620,7 @@ footer input {
 }
 
 footer .link-section {
-    flex: 1;
+    flex: 1 1 0;
     text-align: center;
     margin: 1em 0.5em;
     min-width: 200px;
